# konkor-project

./: .dockerignore  .gitignore  build_blog_local.bat  docker-compose.yml  server_setup.sh
backend/: .env-local  .env.example  .gitignore  Dockerfile  liara.json  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  monitoring.py  serializers.py  urls.py  views.py
backend/api/management/: __init__.py
backend/api/management/commands/: cleanup_otps.py  cleanup_planner_requests.py
backend/api/migrations/: 0001_initial.py  0002_studentprofile.py  0003_alter_emailotp_created_at_alter_emailotp_email_and_more.py  0004_category_tag_blogpost_comment_and_more.py  0005_user_groups_user_is_superuser_user_user_permissions.py  0006_remove_blogpost_author_remove_blogpost_category_and_more.py  0007_plannerrequest.py  0008_book_exam_syllabusdetail.py
backend/blog/: models.py  serializers.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py
backend/config/: health.py  settings.py  urls.py
blog-api/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
blog-api/config/: admin.ts  middlewares.ts
blog-api/src/: index.ts
docs/: git-pull.md  monitoring-tools.md  workflow.md
frontend/: .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: CropModal.tsx  blog-filters.tsx  blog-post-card.tsx  comment-section.tsx  live-preview.tsx
frontend/lib/: api.ts  appwrite.ts  markdown.ts  seo.ts  (+1 more)
nginx/: nginx.conf
(+61 files in other folders)
